--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Rajdeep Ghosh",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "node-cron": "^3.0.3"
   },
