--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^148.0.0",
     "node-cron": "^3.0.3"
   },
   "devDependencies": {
